# hub-lite

./: .gitignore  .pre-commit-config.yaml  .stylelintrc.json  404.html  CNAME  LICENSE  Makefile  README.md  all_plugins_search.js  build_site.py  create_html_files.py  create_static_html_files.py  entire_text_search.js  fetch_napari_data.py  index.html  package.json  pixi.toml  plugins_list.html  plugins_manifest.json  pyproject.toml  requirements.txt  search_results.html  search_results.py  separate_style.ipynb  test.md  todo.txt
.circleci/: config.yml
css/: plugin_styles.css
data/: cleaned_napari_plugins.csv  final_plugins.csv  plugin_page_data.json  search_index.ndjson
notebooks/: check-plugin.ipynb  explore_csv.py  separate_style.ipynb
plugins/: AlveolEye.html  AlveolEye.md  AxonDeepSeg.html  Image-Composer.html  Image-Composer.md  Image-Part-Selecter.html  Image-Part-Selecter.md  Label-Creator.html  Label-Creator.md  Large-Image-Viewer.html  Large-Image-Viewer.md  Layer-Data-Replace.html  Layer-Data-Replace.md  MMV-playground.html  MMV-playground.md  MSI-Explorer.html  MSI-Explorer.md  Napari-VASCilia.html  Napari-VASCilia.md  Offset-Subtraction.html  Offset-Subtraction.md  PartSeg-smfish.html  PartSeg-smfish.md  PartSeg.html  PartSeg.md  Partial-Aligner.html  Partial-Aligner.md  PlatyMatch.html  PlatyMatch.md  PoseR-napari.html  PoseR-napari.md  RedLionfish.html  VessQC.html  VessQC.md  World2Data.html  World2Data.md  acquifer-napari.html  acquifer-napari.md  ads_napari.html  affinder.html  (+1180 more)
template/: all_plugins_template.html  each_plugin_template.html
(+412 files in other folders)
